feat: add custom Tailwind color palette and navigation component

--- a/index.css
+++ b/index.css
@@ -1,1 +1,20 @@
 @import "tailwindcss";
+
+@theme {
+  --color-primary: #006aff;
+  --color-secondary: #0fb8f0;
+  --color-accent: #ef3434;
+  --color-bg-dark: #020104;
+  --color-bg-light: #04131c;
+  --color-text: #f3eef7;
+  --color-text-muted: #666269;
+  --color-card: #021636;
+  --color-button: #06384b;
+  --color-linear: ;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+
+body {
+  font-family: "Geist", sans-serif;
+}
