--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
 @import "tailwindcss";
 
 @theme {
@@ -13,7 +14,69 @@
   --color-linear: ;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+@layer components {
+  .heading-700-24 {
+    @apply font-bold text-2xl text-text; /* text-2xl = 24px */
+  }
+
+  .title-600-64 {
+    @apply font-semibold text-6xl text-text; /* text-6xl = 64px */
+  }
+
+  .title-600-48 {
+    @apply font-semibold text-5xl text-text; /* text-5xl = 48px */
+  }
+
+  .heading-600-32 {
+    @apply font-semibold text-4xl text-text; /* text-4xl = 32px */
+  }
+
+  .subtitle-600-24 {
+    @apply font-semibold text-2xl text-text;
+  }
+
+  .subtitle-600-20 {
+    @apply font-semibold text-xl text-text;
+  }
+
+  .subtitle-600-16 {
+    @apply font-semibold text-base text-text;
+  }
+
+  .caption-500-24 {
+    @apply font-medium text-2xl text-text;
+  }
+
+  .caption-500-14 {
+    @apply font-medium text-sm text-text; /* text-sm = 14px */
+  }
+
+  .caption-500-12 {
+    @apply font-medium text-xs text-text; /* text-xs = 12px */
+  }
+
+  .body-default-400-16 {
+    @apply font-normal text-base text-text; /* 16px */
+  }
+
+  .body-large-400-18 {
+    @apply font-normal text-lg text-text; /* 18px */
+  }
+
+  .body-small-400-14 {
+    @apply font-normal text-sm text-text;
+  }
+
+  .body-xtra-small-400-12 {
+    @apply font-normal text-xs text-text;
+  }
+}
+
+@layer base {
+  ::selection {
+    @apply bg-secondary text-bg-dark;
+  }
+}
 
 body {
   font-family: "Geist", sans-serif;
