--- a/index.css
+++ b/index.css
@@ -84,3 +84,15 @@
 body {
   font-family: "Geist", sans-serif;
 }
+
+/* @keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+.animate-scroll {
+  animation: scroll 40s linear infinite;
+} */
