--- a/src/input.css
+++ b/src/input.css
@@ -9,6 +9,7 @@
   --color-bg-light: #04131c;
   --color-text: #f3eef7;
   --color-text-muted: #666269;
+  --color-text-blog: #e6e5e6;
   --color-card: #021636;
   --color-button: #06384b;
   --color-linear: ;
@@ -77,7 +78,7 @@
 
 @layer base {
   ::selection {
-    @apply bg-secondary text-bg-dark;
+    @apply bg-text text-primary;
   }
 }
 
