--- a/src/output.css
+++ b/src/output.css
@@ -47,6 +47,7 @@
     --color-bg-light: #04131c;
     --color-text: #f3eef7;
     --color-text-muted: #666269;
+    --color-text-blog: #e6e5e6;
     --color-card: #021636;
     --color-button: #06384b;
   }
@@ -260,9 +261,6 @@
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
-  }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
   }
@@ -317,9 +315,6 @@
   .inline-flex {
     display: inline-flex;
   }
-  .table {
-    display: table;
-  }
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
@@ -337,9 +332,6 @@
   }
   .h-25 {
     height: calc(var(--spacing) * 25);
-  }
-  .h-30 {
-    height: calc(var(--spacing) * 30);
   }
   .h-50 {
     height: calc(var(--spacing) * 50);
@@ -370,12 +362,6 @@
   }
   .max-h-\[25rem\] {
     max-height: 25rem;
-  }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
-  .w-1\/2 {
-    width: calc(1/2 * 100%);
   }
   .w-3 {
     width: calc(var(--spacing) * 3);
@@ -416,6 +402,9 @@
   .w-200 {
     width: calc(var(--spacing) * 200);
   }
+  .w-210 {
+    width: calc(var(--spacing) * 210);
+  }
   .w-230 {
     width: calc(var(--spacing) * 230);
   }
@@ -433,9 +422,6 @@
   }
   .min-w-\[300px\] {
     min-width: 300px;
-  }
-  .border-collapse {
-    border-collapse: collapse;
   }
   .-rotate-2 {
     rotate: calc(2deg * -1);
@@ -460,9 +446,6 @@
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .resize-none {
     resize: none;
@@ -496,6 +479,9 @@
   }
   .justify-start {
     justify-content: flex-start;
+  }
+  .gap-0\.5 {
+    gap: calc(var(--spacing) * 0.5);
   }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
@@ -561,10 +547,6 @@
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
   .border-1 {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -601,9 +583,6 @@
   }
   .bg-green-500 {
     background-color: var(--color-green-500);
-  }
-  .bg-secondary {
-    background-color: var(--color-secondary);
   }
   .bg-white {
     background-color: var(--color-white);
@@ -695,15 +674,17 @@
   .py-15 {
     padding-block: calc(var(--spacing) * 15);
   }
+  .ps-4 {
+    padding-inline-start: calc(var(--spacing) * 4);
+  }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
   }
+  .pt-3 {
+    padding-top: calc(var(--spacing) * 3);
+  }
   .text-center {
     text-align: center;
-  }
-  .text-4xl {
-    font-size: var(--text-4xl);
-    line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
   .text-\[16px\] {
     font-size: 16px;
@@ -718,14 +699,14 @@
   .text-text {
     color: var(--color-text);
   }
+  .text-text-blog {
+    color: var(--color-text-blog);
+  }
   .text-text-muted {
     color: var(--color-text-muted);
   }
   .text-transparent {
     color: transparent;
-  }
-  .underline {
-    text-decoration-line: underline;
   }
   .opacity-30 {
     opacity: 30%;
@@ -762,16 +743,16 @@
       --tw-shadow-color: color-mix(in oklab, var(--color-button) var(--tw-shadow-alpha), transparent);
     }
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .blur-sm {
     --tw-blur: blur(var(--blur-sm));
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
-  .filter {
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  .hover\:text-text {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-text);
+      }
+    }
   }
   .hover\:underline {
     &:hover {
@@ -934,8 +915,8 @@
 }
 @layer base {
   ::selection {
-    background-color: var(--color-secondary);
-    color: var(--color-bg-dark);
+    background-color: var(--color-text);
+    color: var(--color-primary);
   }
 }
 body {
@@ -1082,11 +1063,6 @@ body {
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -1179,7 +1155,6 @@ body {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
