--- a/src/input.css
+++ b/src/input.css
@@ -38,6 +38,10 @@
   @apply font-bold text-2xl text-text;
 }
 
+@utility heading-700-20 {
+  @apply font-bold text-xl text-text;
+}
+
 @utility title-600-64 {
   @apply font-semibold text-6xl text-text;
 }
